Update structure of portfolio for react version

--- a/index.scss
+++ b/index.scss
@@ -5,19 +5,8 @@
     box-sizing: border-box;
 }
 
-html {
-    font-size: 1px;
-}
-
+html,
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
-
-@media screen and (max-width: 992px) {
-    html {
-        font-size: 0.75px;
-    }
-}
-
