--- a/projects/projects.css
+++ b/projects/projects.css
@@ -11,7 +11,7 @@
 }
 .projects h2 {
   text-align: center;
-  font-size: 20rem;
+  font-size: 1.25em;
 }
 .projects ul {
   list-style-type: none;
@@ -24,17 +24,17 @@
 }
 .projects ul li {
   flex-basis: 50%;
-  margin: 1rem 0;
-  padding: 10rem;
-  border: 1rem solid #ccc;
-  border-radius: 5rem;
+  margin: 0.0625em 0;
+  padding: 0.625em;
+  border: 0.0625em solid #ccc;
+  border-radius: 0.3125em;
   background-color: #fff;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 .projects ul li a {
   text-decoration: none;
   color: dodgerblue;
   text-transform: capitalize;
-  font-size: 16rem;
+  font-size: 1em;
 }/*# sourceMappingURL=projects.css.map */
