--- a/projects/2025009/Project2025009.css
+++ b/projects/2025009/Project2025009.css
@@ -206,6 +206,7 @@
   gap: 1.75rem;
 }
 .project-2025009 .choose-enjoy .card {
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
