--- a/projects/2025009/Project2025009.scss
+++ b/projects/2025009/Project2025009.scss
@@ -255,6 +255,7 @@
         }
 
         .card {
+            flex: 1;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
