--- a/projects/projects.scss
+++ b/projects/projects.scss
@@ -40,6 +40,10 @@
                 text-transform: capitalize;
                 font-size: 1em
             }
+
+            svg {
+                margin-left: 0.5em;
+            }
         }
     }
 }
